# isec-p-tic-tac-toe

./: CMakeLists.txt  README.md  main.c  relatorio.docx  relatorio_update.docx
game/: game.c  game.h  gameBoard.c  gameBoard.h  player.c  player.h  utils.c  utils.h
game/modes/: HumanVsBot.c  HumanVsBot.h  HumanVsHuman.c  HumanVsHuman.h  humanvshuman.c  humanvshuman.h
